--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                   <div class="carousel-item active">
                     <img src="img/1.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
-                      <h5>Welcome to The-Morpher Github Page</h5>
+                      <h5>Welcome to my Github Page</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="img/2.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
-                      <h5>Love programming and discover new technologies</h5>
+                      <h5>Love programming and discovering new technologies</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -55,7 +55,7 @@
                   <div class="carousel-item">
                     <img src="img/4.jpg" class="d-block img-fluid w-100">
                     <div class="carousel-caption">
-                      <h5>Feel free to give me a hint if anything need a tweak</h5>
+                      <h5>Feel free to give me a hint or contacting me</h5>
                     </div>
                   </div>
                 </div>
@@ -77,12 +77,12 @@
                 <img src="img/author.jpg" style="width: 120px;">
                 <h2>About Me</h2>
                 <div class="about-content">
-                  Hello, My Name Is Mohssine EL HARFI (often i use The-Morpher as Nickname) a lambda person living in Morocco, love coding especially in games environment or Desktop/Web application.
+                  Hello, My Name Is Mohssine EL HARFI a lambda person living in Morocco, love coding especially in Desktop, Web applications, Core projects and also games environments.
                   <div class="about-content-sub">
-                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core 2 and 3, Visual studio features annd arround .net echosystem since 2009.  
+                    My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core, Visual studio features and arround .net echosystem since 2009.  
                   </div>
                   <div class="about-content-sub">
-                    Over the time i lose hand over some technologies like PHP, C++, VB that i don't use them often.
+                    Over the time I lose hand over some technologies like PHP, C++, VB, MVC that i don't use them often.
                   </div>
                   <div class="about-content-sub">
                     Almost all of my project is shared here under MIT Licence, apart some private ones for commercial purpose.
@@ -91,27 +91,17 @@
                     My Job "Developper"
                   </div>
                   <div class="about-content-job">
-                    I work as Developper in hospitality environment, most of skills needed :<br>
+                    I work as Full Stack Developper {Angular / .Net Core}, most of skills needed :<br>
                     Software developpement.<br>
-					Softeware Architecture.<br>
-					Storage, Database, logging.<br>
-					Technical concerns.<br>
-					Deployement, versionning, testing.<br>
-				  <div class="about-content-job-title" style="color: darkcyan;">
-                    Previouse Job Knownledge/Experience : "IT"
-                  </div>
-                    Router/Switch L1/L2/L3 supervising/configuring.<br>
-                    Sharing devcies, printers, files and users permissions.<br>
-                    Outlook, Office 2008 support.<br>
-                    POS support, Micros, OPERA Fidelio, HotSOS, Vingcard, SpaSoft, AudioCodes, Avaya.<br>
-                    Windows 7, 10, 2013 server, 2015 server, 2018 server, 2019 server, Unix/Ubuntu.<br>
-                    Wiring and Wifi support.
+                    Storage, Database, logging.<br>
+                    Technical concerns.<br>
+				          	Deployement, versionning, testing.<br>
                   </div>
                   <div class="about-content-hobbies-title" style="color: darkcyan;">
                     Hobbies
                   </div>
                   <div class="about-content-hobbies">
-                    Programming coding scripting :)
+                    Programming # coding # scripting :)
                   </div>
                   <div class="about-content-hobbies">
                     Spend 8h to 12h per day programming in C# most of the time.
@@ -122,10 +112,10 @@
                   <div class="about-content-hobbies">
                     Moding games.
                   </div>
-				  <div class="about-content-hobbies">
+				          <div class="about-content-hobbies">
                     Reverse engeenering win 32/64 apps using OllyDbg, dbg64, Hex editor.
                   </div>
-				  <div class="about-content-hobbies">
+				          <div class="about-content-hobbies">
                     Web security, analysis, auditing.
                   </div>
                 </div>
@@ -153,31 +143,31 @@
                     100%
                   </div>
                 </div>
-				<p>.Net</p>
+				        <p>.Net</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 100%;">
                     100%
                   </div>
                 </div>
-				<p>.net Core</p>
+				        <p>.net Core</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 100%;">
                     100%
                   </div>
                 </div>
-				<p>SqlServer / EntityFramework</p>
+				        <p>SqlServer / EntityFramework</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 60%;">
-                    60%
+                  <div class="progress-bar" style="width: 50%;">
+                    50%
                   </div>
                 </div>
-				<p>.NoSql (MongoDb, RavenDb)</p>
+				        <p>.NoSql (MongoDb, RavenDb)</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 80%;">
                     80%
                   </div>
                 </div>
-				<p>Architecture {Microservices, Rest, CQRS, Event sourcing, MVC, DDD}</p>
+				        <p>Architecture {Microservices, Rest, CQRS, Event sourcing, MVC, DDD}</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 100%;">
                     100%
@@ -185,65 +175,35 @@
                 </div>
                 <p>UI Design</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 60%;">
-                    60%
-                  </div>
-                </div>
-				<p>Angular</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 100%;">
-                    100%
-                  </div>
-                </div>
-                <p>Php</p>
-                <div class="progress">
                   <div class="progress-bar" style="width: 20%;">
                     20%
                   </div>
                 </div>
-                <p>Javascript</p>
+				        <p>Angular</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 60%;">
                     60%
                   </div>
                 </div>
-				<p>Typescript</p>
+				        <p>Typescript</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 100%;">
-                    100%
+                  <div class="progress-bar" style="width: 60%;">
+                    60%
                   </div>
                 </div>
                 <p>HTML</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 60%;">
-                    60%
+                  <div class="progress-bar" style="width: 40%;">
+                    40%
                   </div>
                 </div>
                 <p>CSS</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 80%;">
-                    80%
+                  <div class="progress-bar" style="width: 40%;">
+                    40%
                   </div>
                 </div>
-                <p>Photoshop</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 30%;">
-                    30%
-                  </div>
-                </div>
-				<p>UX Design</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 50%;">
-                    50%
-                  </div>
-                </div>
-                <p>Web developping</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 100%;">
-                    100%
-                  </div>
-                </div>
-				<p>Devops {Git, SVN, TFS}</p>
+				        <p>Devops {Git, TFS, Azure}</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 100%;">
                     100%
@@ -255,22 +215,16 @@
                     60%
                   </div>
                 </div>
-				<p>Web Security</p>
+				        <p>Web Security</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 60%;">
                     60%
                   </div>
                 </div>
-                <p>C/C++</p>
+                <p>Methodologies {Agile, Scrum, CICD}</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 20%;">
-                    20%
-                  </div>
-                </div>
-                <p>IT</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 50%;">
-                    60%
+                    100%
                   </div>
                 </div>
               </div>
