--- a/index.html
+++ b/index.html
@@ -137,19 +137,7 @@
               <!----Points of interest---->
               <div class="col-md-6 skills-bar">
                 <p style="color: cadetblue; font-size: 20px;">Points of interest</p>
-                <p>C#</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 100%;">
-                    100%
-                  </div>
-                </div>
-				        <p>.Net</p>
-                <div class="progress">
-                  <div class="progress-bar" style="width: 100%;">
-                    100%
-                  </div>
-                </div>
-				        <p>.net Core</p>
+                <p>C#, .Net, .Net Core</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 100%;">
                     100%
