correct to web app instead of web application

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="img/author.jpg" style="width: 120px;">
                 <h2>About Me</h2>
                 <div class="about-content">
-                  Hello, My Name Is Mohssine EL HARFI a lambda person living in Morocco, love coding especially in Desktop, Web applications, Core projects and also games environments.
+                  Hello, My Name Is Mohssine EL HARFI a lambda person living in Morocco, love coding especially in Desktop, Web app, Core projects and also games environments.
                   <div class="about-content-sub">
                     My favorites languages is C# and ... well in reality i focused a couples of years coding around C# environment as Windows Forms App, Windows Desktop App, Libraries, ASP .Net Core, Visual studio features and arround .net echosystem since 2009.  
                   </div>
