--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 </div>
               </nav>
         </section>
+	<div class="badge-base LI-profile-badge" data-locale="fr_FR" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="mohssine-el-harfi-b961bb3a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ma.linkedin.com/in/mohssine-el-harfi-b961bb3a?trk=profile-badge">Mohssine EL HARFI</a></div>
         <!----Slider---->
         <div id="slider">
             <div id="headerSlider" class="carousel slide" data-ride="carousel">
