removing LinkedIn badge & some fixes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
                 </a>
               </div>
         </div>
-	<div class="badge-base LI-profile-badge" data-locale="fr_FR" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="mohssine-el-harfi-b961bb3a" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ma.linkedin.com/in/mohssine-el-harfi-b961bb3a?trk=profile-badge">Mohssine EL HARFI</a></div>
         <!----About---->
         <section id="about">
           <div class="container">
@@ -90,7 +89,7 @@
                     Almost all of my project is shared here under MIT Licence, apart some private ones for commercial purpose.
                   </div>
                   <div class="about-content-job-title" style="color: darkcyan;">
-                    My Job "Developper"
+                    My Job "Software Developper"
                   </div>
                   <div class="about-content-job">
                     I work as Full Stack Developper {Angular / .Net Core}, most of skills needed :<br>
@@ -213,7 +212,7 @@
                 </div>
                 <p>Methodologies {Agile, Scrum, CICD}</p>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 20%;">
+                  <div class="progress-bar" style="width: 100%;">
                     100%
                   </div>
                 </div>
